[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/FloorTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Tilesets/AutoTileWalls.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Chracters/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/VissionMode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/BriefCase.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=8]
[ext_resource path="res://Lightmaps/radial.png" type="Texture" id=9]
[ext_resource path="res://Lightmaps/torchmap.png" type="Texture" id=10]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=11]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=12]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/TutorialGui.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 156.771, 65.2787 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5543, 32.5968 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.0223, 63.2361 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="Floors" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65551, 15, 0, 65552, 15, 0, 65553, 15, 0, 131072, 4, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 16, 0, 131086, 16, 0, 131087, 15, 0, 131088, 15, 0, 131089, 15, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196617, 16, 0, 196618, 16, 0, 196619, 16, 0, 196620, 16, 0, 196621, 16, 0, 196623, 15, 0, 196624, 15, 0, 262144, 16, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262159, 15, 0, 262160, 15, 0, 262161, 15, 0, 327680, 16, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327689, 15, 0, 327690, 15, 0, 327691, 15, 0, 327692, 15, 0, 327693, 15, 0, 327697, 15, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 16, 0, 393225, 15, 0, 393226, 15, 0, 393227, 15, 0, 393228, 15, 0, 393229, 15, 0, 393231, 15, 0, 393232, 15, 0, 393233, 15, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 16, 0, 458761, 15, 0, 458762, 15, 0, 458763, 15, 0, 458764, 15, 0, 458765, 15, 0, 458767, 15, 0, 458768, 15, 0, 458769, 15, 0, 524295, 16, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 15, 0, 524303, 15, 0, 589833, 15, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589839, 17, 0, 589840, 15, 0, 589841, 15, 0, 655369, 15, 0, 655370, 15, 0, 655371, 15, 0, 655372, 15, 0, 655373, 15, 0, 655374, 15, 0, 655375, 17, 0, 655376, 17, 0, 655377, 15, 0, 720905, 15, 0, 720906, 15, 0, 720907, 15, 0, 720908, 15, 0, 720909, 15, 0, 720910, 15, 0, 720911, 15, 0, 720912, 15, 0, 720913, 15, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 2, 2, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 262148, 9, 0, 196612, 10, 0, 196612, 11, 0, 196612, 12, 0, 196612, 13, 0, 196612, 14, 0, 0, 15, 0, 2, 16, 0, 2, 17, 0, 2, 18, 0, 1, 65536, 0, 65538, 65544, 0, 65543, 65545, 0, 196613, 65546, 0, 196613, 65547, 0, 196613, 65548, 0, 196613, 65549, 0, 196613, 65550, 0, 65544, 65554, 0, 65538, 131072, 0, 65538, 131090, 0, 65538, 196608, 0, 65538, 196616, 0, 65541, 196622, 0, 65541, 196625, 0, 65542, 196626, 0, 65540, 262144, 0, 65538, 262152, 0, 65539, 262153, 0, 2, 262154, 0, 2, 262155, 0, 2, 262156, 0, 2, 262157, 0, 2, 262158, 0, 65540, 262162, 0, 65538, 327680, 0, 65538, 327688, 0, 65538, 327694, 0, 65539, 327695, 0, 2, 327696, 0, 5, 327698, 0, 65538, 393216, 0, 65538, 393224, 0, 65538, 393230, 0, 65538, 393234, 0, 65538, 458752, 0, 65538, 458760, 0, 65538, 458766, 0, 65538, 458770, 0, 65538, 524288, 0, 65536, 524289, 0, 2, 524290, 0, 2, 524291, 0, 2, 524292, 0, 2, 524293, 0, 2, 524294, 0, 2, 524295, 0, 2, 524296, 0, 65540, 524302, 0, 65538, 524304, 0, 65542, 524305, 0, 2, 524306, 0, 65540, 589832, 0, 65538, 589838, 0, 65538, 589842, 0, 65538, 655368, 0, 65538, 655374, 0, 6, 655378, 0, 65538, 720904, 0, 65538, 720914, 0, 65538, 786440, 0, 65536, 786441, 0, 2, 786442, 0, 2, 786443, 0, 2, 786444, 0, 2, 786445, 0, 2, 786446, 0, 2, 786447, 0, 2, 786448, 0, 2, 786449, 0, 2, 786450, 0, 65537 )

[node name="Door" parent="." instance=ExtResource( 4 )]
position = Vector2( 929.126, 158.576 )
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 237.303, 329.999 )
disguises = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="VissionMode" parent="." instance=ExtResource( 6 )]
position = Vector2( 237.303, 329.999 )

[node name="BriefCase" parent="." instance=ExtResource( 7 )]
position = Vector2( 1065.57, 733.641 )

[node name="Exit" parent="." instance=ExtResource( 8 )]
margin_left = 609.381
margin_top = 388.949
margin_right = 859.381
margin_bottom = 488.949

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 405.12, 143.835 )
texture = ExtResource( 9 )
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 686.832, 239.157 )
rotation = -0.215379
scale = Vector2( 0.50266, 0.5 )
texture = ExtResource( 10 )
offset = Vector2( 320, 0 )
shadow_enabled = true

[node name="ObjectiveMarkers" type="Node2D" parent="."]
editor/display_folded = true

[node name="MoveObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 691.087, 172.772 )

[node name="DoorObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 969.395, 158.303 )

[node name="NigthVisionObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 1117.48, 422.142 )

[node name="LootObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 1066.42, 733.642 )

[node name="ExitObjective" type="Position2D" parent="ObjectiveMarkers"]
position = Vector2( 734.493, 438.313 )

[node name="ObjectiveAreas" type="Node2D" parent="."]
editor/display_folded = true

[node name="ObjectiveMove" type="Area2D" parent="ObjectiveAreas"]
editor/display_folded = true
position = Vector2( 733.404, 192.766 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveMove"]
shape = SubResource( 1 )

[node name="ObjectiveDoor" type="Area2D" parent="ObjectiveAreas"]
editor/display_folded = true
position = Vector2( 977.906, 160.857 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveDoor"]
shape = SubResource( 2 )

[node name="ObjectiveNightVision" type="Area2D" parent="ObjectiveAreas"]
editor/display_folded = true
position = Vector2( 1114.08, 447.675 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveNightVision"]
shape = SubResource( 3 )

[node name="ObjectivePointer" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -55.321, 346.395 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectivePointer"]
texture = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Tween" type="Tween" parent="."]

[node name="GUI" parent="." instance=ExtResource( 13 )]

[node name="TutorialGui" parent="." instance=ExtResource( 14 )]
[connection signal="body_entered" from="BriefCase" to="." method="_on_BriefCase_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveMove" to="." method="_on_ObjectiveMove_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveDoor" to="." method="_on_ObjectiveDoor_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/ObjectiveNightVision" to="." method="_on_ObjectiveNightVision_body_entered"]
